fix(ui): Fix disabled date picker styles on iOS
Resolves #1533

--- a/interface/src/components/FormTextField.module.scss
+++ b/interface/src/components/FormTextField.module.scss
@@ -8,6 +8,8 @@
   display: block;
   border-width: 0px;
   border-radius: var(--border-radius);
+  appearance: none;
+  -webkit-appearance: none;
   min-height: 9.5 * variables.$size;
   caret-color: var(--content-emphasis);
 
